src/styles.css
html, body {
  font-family: sans-serif;
  text-align: center;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

select {
  padding: 8px;
  margin: 10px;
  background: white;
  border: 1px solid #ccc;
  border-radius: 5px;
  font-family: sans-serif;
  cursor: pointer;
}

#filter-select {
  position: absolute;
  top: 10px;
  left: 10px;
  z-index: 1000;
}

.statistics-section {
  display: flex;
  justify-content: space-around;
  padding: 10px;
  background-color: #f9f9f9;
  border-bottom: 1px solid #ccc;
}

.stat-box {
  padding: 10px;
  border: 2px solid #ccc; /* Grey border around each stat box */
  border-radius: 5px;
  background-color: white;
  text-align: center;
  width: 150px;
}

.stat-box label {
  display: block;
  font-weight: bold;
  margin-bottom: 5px;
}

.stat-box p {
  font-size: 1.5em;
  margin: 0;
}

.mapboxgl-popup {
  border: none; /* Remove default border */
}

.mapboxgl-popup-content {
  background: white;
  padding: 10px; /* Reduce padding */
  border-radius: 10px; /* Rounded corners */
  border: 2px solid black; /* Black border around the tooltip */
  white-space: normal;
  max-width: 250px; /* Reduce max-width */
  word-wrap: break-word; /* Ensure long words or URLs break properly */
  overflow: hidden; /* Prevent content overflow */
  text-align: left; /* Left align text */
}

.mapboxgl-popup-tip {
  border-top-color: black !important; /* Ensure the popup tip has the same border color */
}

.tooltip strong {
  display: block;
  margin-bottom: 5px; /* Decrease margin */
  font-size: 1.2em; /* Reduce font size */
}

.tooltip p {
  margin: 5px 0; /* Decrease margin */
  font-size: 1em; /* Reduce font size */
}

.tooltip a {
  display: block;
  margin: 8px auto 0; /* Center align link */
  padding: 8px 12px; /* Adjust padding */
  background: #f0f0f0;
  border-radius: 30px; /* More rounded corners */
  color: #007bff;
  cursor: pointer;
  font-size: 1em; /* Reduce font size */
  text-decoration: none;
  width: fit-content; /* Center align the link */
}

.tooltip a:hover {
  background: #e0e0e0;
  text-decoration: underline;
}

.tooltip iframe {
  width: 100%; /* Make iframe take full width of tooltip */
  height: 150px; /* Adjust height */
  border-radius: 10px; /* Match tooltip border radius */
  margin-top: 5px; /* Add margin to the top */
}

